samples/AzureAKS/test/mq-console-ingress-mqdemo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mq-console-ingress-mq-demo
  namespace: mq-demo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - mqconsole.ibm.com
  ingressClassName: nginx
  rules:
  - http:
      paths: 
      - path: /ibmmq/console
        pathType: Prefix
        backend:
          service:
            name: secureapphelm-ibm-mq
            port:
              number: 9443
